--- a/cs-html.html
+++ b/cs-html.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML & CSS Cheatsheet</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <link href="navbar-styles.css" rel="stylesheet">
 </head>
 <body>
 <header>
