--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>HTML & CSS Cheatsheet</title>
-	<link href="styles.css" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
+	<link href="navbar-styles.css" rel="stylesheet">
+	<link href="main-styles.css" rel="stylesheet">
+
 </head>
 <body>
 <header>
@@ -16,6 +19,7 @@
 </header>
 <main>
 	<h1> Please select a cheatsheet </h1>
+	<p>¯\_( ͡❛ ͜ʖ ͡❛)_/¯</p>
 </main>
 
 </body>
